# libbf

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  bf-disasm.c  bf-disasm.h  bf_basic_blk.c  bf_basic_blk.h  bf_cfg.c  bf_cfg.h  bf_disasm.c  bf_disasm.h  bf_func.c  bf_func.h  bf_insn.c  bf_insn.h  bf_insn_decoder.c  bf_insn_decoder.h  bf_mem_manager.c  bf_mem_manager.h  bf_sym.c  bf_sym.h  bf_sym_tab.c  bf_sym_tab.h  binary_file.c  binary_file.h  configure.ac  coreutils-cfg.c  main.c  makefile
Embed/: Combine.c  Embed.c  Hello.c  Makefile
Report/: Architecture.tex  Architecture.vsd  Background.tex  Binary_Abstraction_Layer_Approach1.vsd  Binary_Abstraction_Layer_Attempt1.vsd  Binary_Abstraction_Layer_Final.vsd  Conclusion.tex  Design.tex  Detouring_Options.vsd  Deviations.tex  Evaluation.tex  Implementation.tex  Instruction_State_Machine.vsd  Introduction.tex  LEEL_vs_EEL.vsd  Loading_Binary.vsd  Object_File_Injector.vsd  Related_Work.tex  Report.tex  Static_Analysis_Engine.vsd  Static_Analysis_Engine_Detail.vsd  Static_Patcher.vsd  Static_Patcher_Detail.vsd  Static_Patcher_Detour.vsd  Static_Patcher_Trampoline.vsd  Testing.tex  Workflow.tex  Workflow.vsd  refs.bib
Target_x86-32/: Target.c
combine/: example-embedobj.c  example-target.c  gen_linker_command.c  inject-simple.c  inject.c  makefile
combine/include/: elf-bfd.h
coreutils/: [  base64  basename  cat  chcon  chgrp  chmod  chown  chroot  cksum  comm  cp  csplit  cut  date  dd  df  dir  dircolors  dirname  du  echo  env  expand  expr  factor  false  fmt  fold  getlimits  ginstall  groups  head  hostid  id  join  kill  link  ln  logname  (+65 more)
evaluation/arguments/: arguments.c  makefile  target.c
evaluation/change/: build-coreutils.sh  change.c  coreutils-change.c  func_analysis.c  func_analysis.h  logger.c  logger.h  makefile  target1.c  target2.c
evaluation/log_rand/: log_rand.c  makefile  rand.c
include/: basic_blk.h  bf_basic_blk.h  bf_cfg.h  bf_copy.h  bf_detour.h  bf_disasm.h  bf_func.h  bf_insn.h  bf_insn_decoder.h  bf_mem_manager.h  bf_sym.h  binary_file.h  bitops.h  cfg.h  detour.h  disasm.h  func.h  hash.h  hlist.h  htable.h  insn.h  insn_decoder.h  kernel.h  list.h  mem_manager.h  section.h  segment.h  symbol.h
lib/: basic_blk.c  bf_basic_blk.c  bf_cfg.c  bf_copy.c  bf_detour.c  bf_disasm.c  bf_func.c  bf_insn.c  bf_insn_decoder.c  bf_mem_manager.c  bf_sym.c  binary_file.c  cfg.c  coreutils-cfg.c  detour.c  disasm.c  func.c  insn.c  insn_decoder.c  mem_manager.c  section.c  segment.c  symbol.c
lib/bfd/: bfd.h  elf-bfd.h
lib/bfd/elf/: internal.h
tests/: copy_test.c  copy_test32.test  copy_test64.test  coreutils-cfg.c  coreutils_test.c  coreutils_test32.test  coreutils_test64.test  detour_test.c  detour_test32.test  detour_test64.test  disasm_engine_test.c  disasm_engine_test32.test  disasm_engine_test64.test  example.c  makefile  testprepare.in  trampoline_test.c  trampoline_test32.test  trampoline_test64.test
tests/detour_targets/: Makefile  detour_target.c
